Changes made to dataset

--- a/Python-Crash-Course/Python Crash Course Exercises .ipynb
+++ b/Python-Crash-Course/Python Crash Course Exercises .ipynb
@@ -28,9 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -43,7 +41,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "7**4"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,32 +58,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s = \"Hi there Sam!\""
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Hi', 'there', 'dad!']"
+       "['Hi', 'there', 'Sam!']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "s.split()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -113,20 +113,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The diameter of Earth is 12742 kilometers.\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'The diameter of the Earth is 12742 kilometers.'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "'The diameter of the {} is {} kilometers.'.format(planet, diameter)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -137,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -148,10 +151,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -159,12 +160,14 @@
        "'hello'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "lst[3][1][2][0]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -175,10 +178,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "d = {'k1':[1,2,3,{'tricky':['oh','man','inception',{'target':[1,2,3,'hello']}]}]}"
@@ -186,10 +187,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -197,12 +196,14 @@
        "'hello'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "d['k1'][3]['tricky'][3]['target'][3]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -219,7 +220,7 @@
    },
    "outputs": [],
    "source": [
-    "# Tuple is immutable"
+    "# Tuple is immutable, list is mutable"
    ]
   },
   {
@@ -235,19 +236,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 47,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def domainGet(string):\n",
+    "    return (string.split('@')[1])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 48,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -255,7 +255,7 @@
        "'domain.com'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,41 +265,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "** Create a basic function that returns True if the word 'dog' is contained in the input string. Don't worry about edge cases like a punctuation being attached to the word dog, but do account for capitalization. **"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 62,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def findDog(string):\n",
+    "    string.lower()\n",
+    "    if \"dog\" in  string:\n",
+    "        return True"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bol = findDog('Is there a dog here?')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
     }
    ],
    "source": [
-    "findDog('Is there a dog here?')"
+    "print (bol)"
    ]
   },
   {
@@ -311,19 +334,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 72,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def countDog(string):\n",
+    "    count = 0\n",
+    "    string.lower()\n",
+    "    lst = string.split()\n",
+    "    return lst.count('dog')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 73,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -331,7 +356,7 @@
        "2"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 76,
    "metadata": {
     "collapsed": true
    },
@@ -366,10 +391,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 77,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -377,12 +400,14 @@
        "['soup', 'salad']"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "list(filter(lambda s: s[0]=='s',seq))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -398,22 +423,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 83,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def caught_speeding(speed, is_birthday):\n",
-    "    pass"
+    "    if speed<=60:\n",
+    "        return \"No ticket\"\n",
+    "    elif is_birthday:\n",
+    "        if speed<=85:\n",
+    "            return \"Small Ticket\"\n",
+    "        else: return \"Big Ticket\"\n",
+    "    elif speed<=80:\n",
+    "        return \"Small ticket\"\n",
+    "    else: return \"Big Ticket\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 84,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -421,7 +450,7 @@
        "'Small Ticket'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,10 +461,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 85,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -443,7 +470,7 @@
        "'Big Ticket'"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,9 +503,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
