--- a/Python-for-Data-Analysis/Pandas/DataFrames.ipynb
+++ b/Python-for-Data-Analysis/Pandas/DataFrames.ipynb
@@ -48,9 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.DataFrame(randn(5,4),index='A B C D E'.split(),columns='W X Y Z'.split())"
@@ -59,9 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -147,9 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -174,9 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -242,9 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 189,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -277,9 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -317,9 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -409,9 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": 193,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -488,9 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 194,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -585,9 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 196,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -671,9 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -749,9 +727,7 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -783,7 +759,7 @@
    "cell_type": "code",
    "execution_count": 199,
    "metadata": {
-    "collapsed": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -815,9 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": 200,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -837,9 +811,7 @@
   {
    "cell_type": "code",
    "execution_count": 201,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -895,9 +867,7 @@
   {
    "cell_type": "code",
    "execution_count": 202,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -974,9 +944,7 @@
   {
    "cell_type": "code",
    "execution_count": 203,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1053,9 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": 204,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1132,9 +1098,7 @@
   {
    "cell_type": "code",
    "execution_count": 205,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1203,9 +1167,7 @@
   {
    "cell_type": "code",
    "execution_count": 206,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1229,9 +1191,7 @@
   {
    "cell_type": "code",
    "execution_count": 207,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1297,9 +1257,7 @@
   {
    "cell_type": "code",
    "execution_count": 208,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1353,9 +1311,7 @@
   {
    "cell_type": "code",
    "execution_count": 209,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1432,9 +1388,7 @@
   {
    "cell_type": "code",
    "execution_count": 210,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1540,9 +1494,7 @@
   {
    "cell_type": "code",
    "execution_count": 213,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1625,9 +1577,7 @@
   {
    "cell_type": "code",
    "execution_count": 214,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1712,9 +1662,7 @@
   {
    "cell_type": "code",
    "execution_count": 215,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1808,9 +1756,7 @@
   {
    "cell_type": "code",
    "execution_count": 218,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1904,9 +1850,7 @@
   {
    "cell_type": "code",
    "execution_count": 253,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Index Levels\n",
@@ -1919,9 +1863,7 @@
   {
    "cell_type": "code",
    "execution_count": 254,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1942,9 +1884,7 @@
   {
    "cell_type": "code",
    "execution_count": 257,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2025,53 +1965,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>A</th>\n",
-       "      <th>B</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.153661</td>\n",
-       "      <td>0.167638</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-0.765930</td>\n",
-       "      <td>0.962299</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.902826</td>\n",
-       "      <td>-0.537909</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          A         B\n",
-       "1  0.153661  0.167638\n",
-       "2 -0.765930  0.962299\n",
-       "3  0.902826 -0.537909"
-      ]
-     },
-     "execution_count": 260,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-a063184fa240>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'G1'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
     }
    ],
    "source": [
@@ -2080,34 +1986,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "A    0.153661\n",
-       "B    0.167638\n",
-       "Name: 1, dtype: float64"
-      ]
-     },
-     "execution_count": 263,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-20e2e0150d1a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'G1'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
     }
    ],
    "source": [
-    "df.loc['G1'].loc[1]"
+    "df.loc['G1'].loc['A']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 265,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2138,9 +2039,7 @@
   {
    "cell_type": "code",
    "execution_count": 267,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2221,9 +2120,7 @@
   {
    "cell_type": "code",
    "execution_count": 270,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2282,9 +2179,7 @@
   {
    "cell_type": "code",
    "execution_count": 271,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2306,9 +2201,7 @@
   {
    "cell_type": "code",
    "execution_count": 273,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2382,9 +2275,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
