--- a/Python-for-Data-Analysis/Pandas/Pandas Exercises/Ecommerce Purchases Exercise .ipynb
+++ b/Python-for-Data-Analysis/Pandas/Pandas Exercises/Ecommerce Purchases Exercise .ipynb
@@ -21,21 +21,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ecom = pd.read_csv('Ecommerce Purchases')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -46,15 +48,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -209,12 +222,14 @@
        "4     24.140.33.94       es           77.82  "
       ]
      },
-     "execution_count": 87,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ecom.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -226,9 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -256,7 +269,9 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "ecom.info()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -268,9 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -283,7 +296,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ecom['Purchase Price'].mean()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -295,9 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -310,14 +323,14 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ecom['Purchase Price'].max()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 93,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -330,7 +343,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ecom['Purchase Price'].min()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -342,9 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -371,7 +384,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ecom[ecom['Language']=='en'].info()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -383,9 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -413,7 +426,9 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "ecom[ecom['Job']=='Lawyer'].info()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -427,9 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -444,7 +457,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ecom['AM or PM'].value_counts('AM')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -456,9 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -476,7 +489,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ecom['Job'].value_counts().head(5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -488,9 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -504,7 +517,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ecom[ecom['Lot']==\"90 WT\"]['Purchase Price']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -516,9 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -532,7 +545,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ecom[ecom['Credit Card']==4926535242672853]['Email']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -544,9 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -573,7 +586,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ecom[ecom['CC Provider'] == \"American Express\"][ecom['Purchase Price']>95].info()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -584,23 +599,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def expiry(date):\n",
+    "    if '25' in date:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1033"
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "sum(ecom['CC Exp Date'].apply(lambda x: expiry(x)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -611,10 +630,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def provider(email):\n",
+    "    sep = '@'\n",
+    "    rest= email.split(sep,1)[1]\n",
+    "    return rest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ecom['Domain'] = ecom['Email'].apply(provider)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -624,15 +662,17 @@
        "gmail.com       1605\n",
        "smith.com         42\n",
        "williams.com      37\n",
-       "Name: Email, dtype: int64"
+       "Name: Domain, dtype: int64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ecom['Domain'].value_counts().head(5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -658,9 +698,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
