--- a/Python-for-Data-Analysis/Pandas/Pandas Exercises/SF Salaries Exercise.ipynb
+++ b/Python-for-Data-Analysis/Pandas/Pandas Exercises/SF Salaries Exercise.ipynb
@@ -33,7 +33,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -45,11 +47,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sal = pd.read_csv('Salaries.csv')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -61,9 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -201,7 +201,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "sal.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -213,9 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -242,7 +242,9 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "sal.info()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -254,9 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -269,7 +269,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "sal['BasePay'].mean()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -281,9 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -296,7 +296,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "sal['OvertimePay'].max()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -308,9 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -324,7 +324,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "sal[sal['EmployeeName']=='JOSEPH DRISCOLL']['JobTitle']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -336,9 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -352,7 +352,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "sal[sal['EmployeeName']=='JOSEPH DRISCOLL']['TotalPayBenefits']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -364,9 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -428,7 +428,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "sal[sal['TotalPayBenefits']==(sal['TotalPayBenefits'].max())]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -440,9 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -504,7 +504,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "sal[sal['TotalPayBenefits']==(sal['TotalPayBenefits'].min())]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -516,9 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -536,7 +536,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "sal.groupby('Year').mean()['BasePay']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -548,9 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -563,7 +563,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "sal['JobTitle'].nunique()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -574,28 +576,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Transit Operator                7036\n",
-       "Special Nurse                   4389\n",
-       "Registered Nurse                3736\n",
-       "Public Svc Aide-Public Works    2518\n",
-       "Police Officer 3                2421\n",
-       "Name: JobTitle, dtype: int64"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'sal' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-78df9e00089d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0msal\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'JobTitle'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue_counts\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'sal' is not defined"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "sal['JobTitle'].value_counts().head(5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -607,9 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -643,9 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -670,18 +664,14 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -747,9 +737,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
