k-means clustering for public vs private universities data

--- a/Machine Learning Sections/K-Means-Clustering/K-Means clustering Universities data.ipynb
+++ b/Machine Learning Sections/K-Means-Clustering/K-Means clustering Universities data.ipynb
@@ -994,7 +994,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Okay, so looks like we have ~ 76% accuracy with our K Means algorithm while grouping universities based off of th"
+    "Okay, so looks like we have ~ 76% accuracy with our K Means algorithm while grouping universities based off of all other features."
    ]
   },
   {
